--- a/model/borrador.ipynb
+++ b/model/borrador.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Borrador del proyecto"
+    "# Entrenamiento de la red neuronal del proyecto"
    ]
   },
   {
@@ -227,11 +227,12 @@
     }
    ],
    "source": [
+    "# importamos librerias necesarias para preprocesar los datos y crear la red neuronal\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import scipy\n",
     "\n",
+    "# abrimos el archivo donde tenemos guardada la informacion de los filos\n",
     "df = pd.read_csv('filos.csv')\n",
     "df.head()"
    ]
@@ -245,6 +246,8 @@
     "from tensorflow.keras.layers import Dense\n",
     "from tensorflow.keras import Sequential\n",
     "\n",
+    "# creamos la red neuronal, con una neurona para cada carcteristica en la capa de entrada \n",
+    "# y una neurona por filo en la capa de salida \n",
     "model = Sequential()\n",
     "model.add(Dense(23, activation='tanh'))\n",
     "model.add(Dense(13, activation='softmax'))\n",
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -270,18 +273,20 @@
    ],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
+    "# ultilizamos un codificador de etiquetas para que la red neuronal entienda cual es cual\n",
     "label_encoder = LabelEncoder()\n",
     "\n",
+    "#separamos varibles de entrada de la varibale objetivo\n",
     "x_df = df.drop('Phylum', axis=1)\n",
     "y_df = df.Phylum\n",
     "\n",
+    "# lo convertimos a un formato que la red neuronal entienda\n",
     "X = x_df.to_numpy()\n",
     "y = y_df.to_numpy()\n",
     "\n",
     "label_encoder.classes_ = np.array([i for i in y])\n",
     "\n",
-    "y_encoded = label_encoder.transform(y,) # target es tu vector de etiquetas originales\n",
+    "y_encoded = label_encoder.transform(y) \n",
     "print(\"Clases codificadas:\", label_encoder.classes_)  # Muestra las clases mapeadas\n",
     "print(\"Etiquetas codificadas:\", y_encoded)\n"
    ]
@@ -399,6 +404,7 @@
     }
    ],
    "source": [
+    "# entrenamos la red neuronal con los datos y las etiquetas\n",
     "_= model.fit(X,y_encoded, epochs=50)"
    ]
   },
@@ -418,6 +424,7 @@
     }
    ],
    "source": [
+    "# medimos su eficiencia \n",
     "test_loss, test_acc = model.evaluate(X,  y_encoded, verbose=2)\n",
     "print('\\nTest accuracy:', test_acc)"
    ]
@@ -437,12 +444,14 @@
     }
    ],
    "source": [
+    "# lo probamos y guardamos asegurando que sea accesible\n",
     "import os\n",
+    "\n",
     "chordata = np.array([1,1,1,0,1,0,1,1,0,1,0,1,0,0,1,1,0,0,1,0,1,1,0])\n",
     "chordata = chordata.reshape(1,-1)\n",
     "pred = model.predict(chordata)\n",
-    "\n",
     "print(np.argmax(pred))\n",
+    "\n",
     "model.save(\"modelo.keras\")\n",
     "os.chmod(\"modelo.keras\", 0o666)"
    ]
