keep going tomorrow

--- a/model/entrenamiento.ipynb
+++ b/model/entrenamiento.ipynb
@@ -239,6 +239,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13, 24)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
    "outputs": [],
