--- a/entrenamiento.ipynb
+++ b/entrenamiento.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Phylum</th>\n",
+       "      <th>descripcion</th>\n",
        "      <th>tejido</th>\n",
        "      <th>organos</th>\n",
        "      <th>sistemas</th>\n",
@@ -42,13 +43,12 @@
        "      <th>diploblastico</th>\n",
        "      <th>triploblastico</th>\n",
        "      <th>segmentacion</th>\n",
-       "      <th>seudocelomados</th>\n",
        "      <th>...</th>\n",
        "      <th>sis_nervioso_ganglionar</th>\n",
        "      <th>sis_nervioso_central</th>\n",
        "      <th>endoesqueleto</th>\n",
        "      <th>exoesqueleto</th>\n",
-       "      <th>sis_corporal</th>\n",
+       "      <th>hidrostatico</th>\n",
        "      <th>rep_sexual</th>\n",
        "      <th>rep_asexual</th>\n",
        "      <th>habitat_terrestre</th>\n",
@@ -60,6 +60,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>chordata</td>\n",
+       "      <td>El filo Chordata incluye a los animales que po...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -68,7 +69,6 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -84,6 +84,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>echinodermata</td>\n",
+       "      <td>El filo Chordata incluye a los animales que po...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -91,7 +92,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -108,6 +108,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>arthropoda</td>\n",
+       "      <td>El filo Chordata incluye a los animales que po...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -116,7 +117,6 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -132,6 +132,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>annelida</td>\n",
+       "      <td>El filo Chordata incluye a los animales que po...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -140,7 +141,6 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -156,6 +156,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>molusca</td>\n",
+       "      <td>El filo Chordata incluye a los animales que po...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -163,7 +164,6 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
@@ -179,49 +179,49 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Phylum  tejido  organos  sistemas  simetria_radial  \\\n",
-       "0       chordata       1        1         1                0   \n",
-       "1  echinodermata       1        1         0                1   \n",
-       "2     arthropoda       1        1         0                0   \n",
-       "3       annelida       1        1         0                0   \n",
-       "4        molusca       1        1         0                0   \n",
+       "          Phylum                                        descripcion  tejido  \\\n",
+       "0       chordata  El filo Chordata incluye a los animales que po...       1   \n",
+       "1  echinodermata  El filo Chordata incluye a los animales que po...       1   \n",
+       "2     arthropoda  El filo Chordata incluye a los animales que po...       1   \n",
+       "3       annelida  El filo Chordata incluye a los animales que po...       1   \n",
+       "4        molusca  El filo Chordata incluye a los animales que po...       1   \n",
        "\n",
-       "   simetria_bilateral  diploblastico  triploblastico  segmentacion  \\\n",
-       "0                   1              0               1             1   \n",
-       "1                   0              0               1             0   \n",
-       "2                   1              0               1             1   \n",
-       "3                   1              0               1             1   \n",
-       "4                   1              0               1             0   \n",
+       "   organos  sistemas  simetria_radial  simetria_bilateral  diploblastico  \\\n",
+       "0        1         1                0                   1              0   \n",
+       "1        1         0                1                   0              0   \n",
+       "2        1         0                0                   1              0   \n",
+       "3        1         0                0                   1              0   \n",
+       "4        1         0                0                   1              0   \n",
        "\n",
-       "   seudocelomados  ...  sis_nervioso_ganglionar  sis_nervioso_central  \\\n",
-       "0               0  ...                        0                     1   \n",
-       "1               0  ...                        0                     0   \n",
-       "2               0  ...                        1                     0   \n",
-       "3               0  ...                        1                     0   \n",
-       "4               0  ...                        1                     0   \n",
+       "   triploblastico  segmentacion  ...  sis_nervioso_ganglionar  \\\n",
+       "0               1             1  ...                        0   \n",
+       "1               1             0  ...                        0   \n",
+       "2               1             1  ...                        1   \n",
+       "3               1             1  ...                        1   \n",
+       "4               1             0  ...                        1   \n",
        "\n",
-       "   endoesqueleto  exoesqueleto  sis_corporal  rep_sexual  rep_asexual  \\\n",
-       "0              1             0             0           1            0   \n",
-       "1              1             0             0           1            0   \n",
-       "2              0             1             0           1            0   \n",
-       "3              0             0             1           1            0   \n",
-       "4              0             1             0           1            0   \n",
+       "   sis_nervioso_central  endoesqueleto  exoesqueleto  hidrostatico  \\\n",
+       "0                     1              1             0             0   \n",
+       "1                     0              1             0             0   \n",
+       "2                     0              0             1             0   \n",
+       "3                     0              0             0             1   \n",
+       "4                     0              0             1             0   \n",
        "\n",
-       "   habitat_terrestre  habitat_acuatico  parasitario  \n",
-       "0                  1                 1            0  \n",
-       "1                  0                 1            0  \n",
-       "2                  1                 1            0  \n",
-       "3                  1                 1            0  \n",
-       "4                  1                 1            0  \n",
+       "   rep_sexual  rep_asexual  habitat_terrestre  habitat_acuatico  parasitario  \n",
+       "0           1            0                  1                 1            0  \n",
+       "1           1            0                  0                 1            0  \n",
+       "2           1            0                  1                 1            0  \n",
+       "3           1            0                  1                 1            0  \n",
+       "4           1            0                  1                 1            0  \n",
        "\n",
-       "[5 rows x 24 columns]"
+       "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(13, 24)"
+       "(13, 25)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
     "label_encoder = LabelEncoder()\n",
     "\n",
     "#separamos varibles de entrada de la varibale objetivo\n",
-    "x_df = df.drop('Phylum', axis=1)\n",
+    "x_df = df.drop(['Phylum','descripcion'], axis=1)\n",
     "y_df = df.Phylum\n",
     "\n",
     "# lo convertimos a un formato que la red neuronal entienda\n",
