some minor changes

--- a/entrenamiento.ipynb
+++ b/entrenamiento.ipynb
@@ -459,18 +459,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 64ms/step\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# lo probamos y guardamos asegurando que sea accesible\n",
     "import os\n",
@@ -482,6 +473,32 @@
     "\n",
     "model.save(\"modelo.keras\")\n",
     "os.chmod(\"modelo.keras\", 0o666)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "import numpy as np\n",
+    "model = load_model('modelo.keras')\n",
+    "def pt (array):\n",
+    "    arr = np.array(array)\n",
+    "    return arr.reshape(1,-1)\n",
+    "\n",
+    "lista = [[1,1,1,0,1,0,1,1,0,1,0,1,0,0,1,1,0,0,1,0,1,1,0],[1,1,0,1,0,0,1,0,0,1,0,1,1,0,0,1,0,0,1,1,0,1,0], [1,1,0,0,1,0,1,1,0,1,0,1,0,1,0,0,1,0,1,0,1,1,0],\n",
+    "          [1,1,0,0,1,0,1,1,0,1,0,1,0,1,0,0,0,1,1,1,1,1,0], [1,1,0,0,1,0,1,0,0,1,0,1,0,1,0,0,1,0,1,0,1,1,0], [1,1,0,0,1,0,1,0,1,0,0,1,0,1,0,0,0,1,1,1,1,1,0],\n",
+    "           [1,1,0,0,1,0,1,0,1,0,0,1,0,1,0,0,0,1,1,0,1,1,1], [1,1,0,0,1,0,1,0,0,0,0,1,0,1,0,0,0,1,1,1,0,1,0], [1,1,0,0,1,0,1,0,0,0,1,0,0,1,0,0,0,1,1,1,1,1,1],\n",
+    "           [1,1,0,1,0,1,0,0,0,0,0,1,1,0,0,0,0,1,1,1,0,1,0], [1,0,0,1,0,1,0,0,0,0,1,0,1,0,0,0,0,1,1,1,0,1,0], [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,1,0],\n",
+    "           [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1]]\n",
+    "for filo in lista :\n",
+    "    test = pt(filo)\n",
+    "    pred = model.predict(test)\n",
+    "    print(np.argmax(pred))\n",
+    "    pred = list(pred)\n",
+    "    print (pred)"
    ]
   }
  ],
